--- a/html/educacion.html
+++ b/html/educacion.html
@@ -6,7 +6,16 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Educacion</title>
     <body>
-    <a href="../Desarrollador Web_Emilio Mayorga.html">volver</a>
+      <svg>
+     <image xlink:href="../image/Logo EM.svg" width="300px" height="300px" x="00px" y="00px"></image></svg><br>
+      <h1>Hoja de vida</h1>
+  <h2>Emilio Arturo Mayorga Santa Cruz</h2>
+  <ul>
+    <li><a href="html/Inicio.html" target="_blank">Inicio</a></li>
+    <li><a href="html/Educacion.html" target="_blank">Educacion</a></li>
+    <li><a href="html/Experiencia.html" target="_blank">Experiencia</a></li>
+  </ul>
+  <a href="../Desarrollador Web_Emilio Mayorga.html">volver</a>
     <h2>Educacion</h2>
       <table border="1"
         <tr>
@@ -43,7 +52,7 @@
           <p><strong><label for="name">Institucion</label></strong>
            <input type="text" id:name="Institucion" required="Institucion"></p>
            <strong><label for="Lugar">Lugar</label></strong>
-           <textarea name="name" rows="2" cols="20"></textarea>
+           <textarea name="name" rows="20" cols="50"></textarea>
            <p>
        			<label for="¿Culmino?">¿Culmino?: </label>
        			<br>
@@ -52,6 +61,12 @@
        			<input type="radio" name="genre"> No
        		</p>
           <input type="submit" value="enviar"><br>
-          <p></p>
+          </p>
+          <p>@Derechos reservados</p>
+          <ul>
+          <li><e><strong>Email:</strong></e>mayorgasc@hotmail.com</li>
+          <li><strong>Telefono:</strong>989299854</li>
+          <li><strong>Direccion:</strong>Ca.Puerto Chicama mzna F lote 19 - Chorrillos</li>
+          </ul>
         </body>
         </html>
