--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Experiencia</title>
     <body>
+      <svg>
+     <image xlink:href="../image/Logo EM.svg" width="300px" height="300px" x="00px" y="00px"></image></svg><br>
+      <h1>Hoja de vida</h1>
+  <h2>Emilio Arturo Mayorga Santa Cruz</h2>
+  <ul>
+    <li><a href="html/Inicio.html" target="_blank">Inicio</a></li>
+    <li><a href="html/Educacion.html" target="_blank">Educacion</a></li>
+    <li><a href="html/Experiencia.html" target="_blank">Experiencia</a></li>
+  </ul>
     <a href="../Desarrollador Web_Emilio Mayorga.html">volver</a>
     <h2>Experiencia Laboral</h2>
     <p><em>2007-2016</em><br>
@@ -33,7 +42,13 @@ Realice supervisiones de trabajos de cableados en redes aéreas, subterráneas y
 <p><strong>Estimados lamentablemente no tengo un video y audio, he tratado de grabar uno corto, no se escucha bien, dejo al menos este video de homenaje que le hice a un tio y un audio musical</strong>
 espero puedan observar como nota la carga del video y el proceso de aplicacion de los codigos html</p>
 <iframe src="https://www.youtube.com/embed/GuMRRxGJApE?ecver=1" width="450" height="250"></iframe><br>
-<h2>Mi nota musical favorita</h2>
-<audio src="Desarrollador WEB_Emilio Mayorga.html/corazon.mp3" controls preload="auto"></audio>
+<h3>Mi nota musical favorita</h3>
+<audio src="../audios/yosinti.mp3" controls preload="auto"></audio>
+<p>@Derechos reservados</p>
+<ul>
+<li><e><strong>Email:</strong></e>mayorgasc@hotmail.com</li>
+<li><strong>Telefono:</strong>989299854</li>
+<li><strong>Direccion:</strong>Ca.Puerto Chicama mzna F lote 19 - Chorrillos</li>
+</ul>
 </body>
 </html>
