--- a/html/inicio.html
+++ b/html/inicio.html
@@ -6,7 +6,18 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Inicio</title>
     <body>
+      <svg>
+     <image xlink:href="../image/Logo EM.svg" width="300px" height="300px" x="00px" y="00px"></image></svg>
+      <h1>Hoja de vida</h1>
+  <h2>Emilio Arturo Mayorga Santa Cruz</h2>
+  <ul>
+    <li><a href="html/Inicio.html" target="_blank">Inicio</a></li>
+    <li><a href="html/Educacion.html" target="_blank">Educacion</a></li>
+    <li><a href="html/Experiencia.html" target="_blank">Experiencia</a></li>
+  </ul>
+  <ul>
     <a href="../Desarrollador Web_Emilio Mayorga.html">volver</a>
+  </ul>
     <h2>Inicio</h2>
     <p>Actualmente me desempeño Supervisor de operaciones en la rama de las telecomunicaciones.<br>
 Dentro de mi trayectoria profesional destaca :<br>
@@ -15,6 +26,12 @@ Dentro de mi trayectoria profesional destaca :<br>
 -Responsable en el apoyo de proyectos de desarrollo de planta externa e interna.<br>
 Considero que soy una persona comprometida con el trabajo, creativa y entusiasta ante los nuevos retos, por ello me gustaría ser considerado para participar en el proceso de selección y colaborar con su equipo de trabajo.<br>
 </p>
+<p>@Derechos reservados</p>
+<ul>
+<li><e><strong>Email:</strong></e>mayorgasc@hotmail.com</li>
+<li><strong>Telefono:</strong>989299854</li>
+<li><strong>Direccion:</strong>Ca.Puerto Chicama mzna F lote 19 - Chorrillos</li>
+</ul>
   </body>
   </head>
 </html>
