--- a/Desarrollador Web_Emilio Mayorga.html
+++ b/Desarrollador Web_Emilio Mayorga.html
@@ -7,22 +7,31 @@
 </head>
 <body>
   <svg>
-     <image xlink:href="image/Logo EM.svg" width="300px" height="300px" x="00px" y="00px"></image></svg><br>
-<h1>Curriculum Vitae</h1>
-<h2>Datos Personales</h2>
-<h3>Nombre: Emilio Arturo Mayorga Santa Cruz</h3>
-<h3>Direccion: Manzana F lote 19 Urb. San Juan Bautista - Chorrillos</h3>
-<h3>Fecha de nacimiento: 31 de diciembre de 1974</h3>
-<h3>Lugar de nacimiento: Lima</h3>
-<h3>Documento de indentidad: 25784267</h3>
+ <image xlink:href="image/Logo EM.svg" width="300px" height="300px" x="00px" y="00px"></image></svg><br>
+<h1>Hoja de vida</h1>
+<h2>Emilio Arturo Mayorga Santa Cruz</h2>
 <ul>
   <li><a href="html/Inicio.html" target="_blank">Inicio</a></li>
   <li><a href="html/Educacion.html" target="_blank">Educacion</a></li>
   <li><a href="html/Experiencia.html" target="_blank">Experiencia</a></li>
 </ul>
+<h3>Informacion Personal</h3>
+<img src="image/imagen.jpg" alt="image" width="250" height="250"/>
 <ul>
-  <li><strong>Correo:</strong>mayorgasc@hotmail.com</li>
-  <li><strong>Telefono:</strong>989299854</li>
+<li><e><strong>Nombres:</strong></e>Emilio Arturo</li>
+<li><strong>Apellidos:</strong>Mayorga Santa Cruz</li>
+<li><strong>Edad:</strong>42 años</li>
+</ul>
+<h3>Informacion de perfil</h3>
+</ul>
+  <li><strong>Perfi:</strong>Tecnico en telecomunicaciones</li>
+  <li><strong>Idiomas:</strong>Castellano</li>
+</ul>
+<p>@Derechos reservados</p>
+<ul>
+<li><e><strong>Email:</strong></e>mayorgasc@hotmail.com</li>
+<li><strong>Telefono:</strong>989299854</li>
+<li><strong>Direccion:</strong>Ca.Puerto Chicama mzna F lote 19 - Chorrillos</li>
 </ul>
 </body>
 </html>
