--- a/html/inicio.html
+++ b/html/inicio.html
@@ -11,9 +11,9 @@
       <h1>Hoja de vida</h1>
   <h2>Emilio Arturo Mayorga Santa Cruz</h2>
   <ul>
-    <li><a href="html/Inicio.html" target="_blank">Inicio</a></li>
-    <li><a href="html/Educacion.html" target="_blank">Educacion</a></li>
-    <li><a href="html/Experiencia.html" target="_blank">Experiencia</a></li>
+    <li><a href="../html/Inicio.html" target="_blank">Inicio</a></li>
+    <li><a href="../html/Educacion.html" target="_blank">Educacion</a></li>
+    <li><a href="../html/Experiencia.html" target="_blank">Experiencia</a></li>
   </ul>
   <ul>
     <a href="../Desarrollador Web_Emilio Mayorga.html">volver</a>
