--- a/html/inicio.html
+++ b/html/inicio.html
@@ -12,7 +12,7 @@
   <h2>Emilio Arturo Mayorga Santa Cruz</h2>
   <ul>
     <li><a href="../Desarrollador Web_Emilio Mayorga.html" target="_blank">Inicio</a></li>
-    <li><a href="html/Educacion.html" target="_blank">Educacion</a></li>
+    <li><a href="../html/Educacion.html" target="_blank">Educacion</a></li>
     <li><a href="html/Experiencia.html" target="_blank">Experiencia</a></li>
   </ul>
   <ul>
