--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -16,8 +16,20 @@
     <li><a href="../html/Experiencia.html" target="_blank">Experiencia</a></li>
   </ul>
     <a href="../Desarrollador Web_Emilio Mayorga.html">volver</a>
-    <h2>Experiencia Laboral</h2>
-    <p><em>2007-2016</em><br>
+<p><strong>Estimados lamentablemente no tengo un video y audio, he tratado de grabar uno corto, no se escucha bien, dejo al menos este video de homenaje que le hice a un tio y un audio musical</strong>
+espero puedan observar como nota la carga del video y el proceso de aplicacion de los codigos html</p>
+<iframe src="https://www.youtube.com/embed/GuMRRxGJApE?ecver=1" width="450" height="250"></iframe><br>
+<h3>Mi nota musical favorita</h3>
+<audio src="../audios/yosinti.mp3" controls preload="auto"></audio>
+<p>@Derechos reservados</p>
+<ul>
+<li><e><strong>Email:</strong></e>mayorgasc@hotmail.com</li>
+<li><strong>Telefono:</strong>989299854</li>
+<li><strong>Direccion:</strong>Ca.Puerto Chicama mzna F lote 19 - Chorrillos</li>
+</ul>
+<a href="../Desarrollador Web_Emilio Mayorga.html">volver</a>
+<h2>Experiencia Laboral</h2>
+<p><em>2007-2016</em><br>
 <strong>FIBERPERU E.I.R.L</strong> <br>
 Servicios de cableado y empalmes de fibra óptica <br>
 Cargo:	Supervisor de operaciones y encargado del área de Planta Externa CU y FO.<br>
@@ -38,17 +50,5 @@ Realice trabajos de mantenimiento de líneas telefónicas y televisión por cabl
 Sub-contratista de telefónica del Perú.<br>
 Cargo: Supervisor Técnico en Telefonía.<br>
 Realice supervisiones de trabajos de cableados en redes aéreas, subterráneas y fachadas haciendo la verificación del estado de la línea, según el tipo de red. Realicé trabajos de empalmes de cables telefónicos para enlaces de centrales telefónicas y de redes primarias y secundarias, para la implementación de abonados.
-</p>
-<p><strong>Estimados lamentablemente no tengo un video y audio, he tratado de grabar uno corto, no se escucha bien, dejo al menos este video de homenaje que le hice a un tio y un audio musical</strong>
-espero puedan observar como nota la carga del video y el proceso de aplicacion de los codigos html</p>
-<iframe src="https://www.youtube.com/embed/GuMRRxGJApE?ecver=1" width="450" height="250"></iframe><br>
-<h3>Mi nota musical favorita</h3>
-<audio src="../audios/yosinti.mp3" controls preload="auto"></audio>
-<p>@Derechos reservados</p>
-<ul>
-<li><e><strong>Email:</strong></e>mayorgasc@hotmail.com</li>
-<li><strong>Telefono:</strong>989299854</li>
-<li><strong>Direccion:</strong>Ca.Puerto Chicama mzna F lote 19 - Chorrillos</li>
-</ul>
 </body>
 </html>
